src/main/java/com/example/mukgen/global/error/exception/BusinessException.java
package com.example.mukgen.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class BusinessException extends RuntimeException{

    private final ErrorCode errorCode;
}
